<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.dovchin.horseapplication1.auth.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#05a8f2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/uyach_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="60sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView24"
            android:layout_centerHorizontal="true"
            android:text="@string/welcome_1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/field_password"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/restore_data"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:foregroundGravity="center"
            android:scaleType="fitEnd"
            android:src="@drawable/azarga_color"
            android:layout_below="@+id/textView26"
            android:layout_alignStart="@+id/textView26"
            android:layout_alignEnd="@+id/textView26" />

        <EditText
            android:id="@+id/field_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/field_password"
            android:layout_below="@+id/imageView11"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/email_login"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/field_email"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:hint="@string/password_login"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_signup"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:text="Нууц үгээ мартсан уу?"
            android:textColor="@color/cardview_light_background"
            android:textColorHint="@color/cardview_light_background" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_forget"
            android:layout_centerHorizontal="true"
            android:background="@null"
            android:text="Бүртгүүлэх"
            android:textStyle="bold" />


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>