...
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="15dp">


            <RelativeLayout
                android:id="@+id/RelativeLAyout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/active_horse">

                <TextView
                    android:id="@+id/textView117"
...
                    android:text="0"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonStallion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:background="@null" />

            </RelativeLayout>
...
