...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_navigation_menu" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_stallion_recview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/appBarLayout3"
        android:layout_marginBottom="55dp"
        android:scrollbars="vertical"
...
